# todolist_prj

./: .docker_ci_env  .docker_env  .dockerignore  .env.example  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: action.yml
bot/: models.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0004_alter_tguser_tg_chat_id.py
config/: settings.py  urls.py
core/: serializers.py  urls.py  views.py
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py
tests/: conftest.py  factories.py  fixtures.py
tests/factories/: __init__.py
tests/goals/: goal_board_create_test.py  goal_create_test.py  goals_list_test.py
tests/test_boards/: test_board_list_view.py
