[tool.poetry]
name = "todoist_prj"
version = "0.1.0"
description = ""
authors = ["neony <neonyan15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
python-dotenv = {extras = ["cli"], version = "^0.20.0"}
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
